Feature: namespace update api
