# swagger_docs/swagger.json
@@ -94,6 +94,46 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "修改命名空间",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "命名空间"
+                ],
+                "summary": "修改命名空间",
+                "parameters": [
+                    {
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "命名空间id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "命名空间更新信息",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/namespace.UpdateOneReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httpx.JSONResult"
+                        }
+                    }
+                }
             }
         }
     },
@@ -146,6 +186,19 @@
                 "name": {
                     "description": "名称",
                     "type": "string"
+                }
+            }
+        },
+        "namespace.UpdateOneReq": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "rule-engine"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "longquan-sword"
                 }
             }
         }
